# shello-cli

./: .gitignore  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT_SETUP.md  LICENSE  README.md  SECURITY.md  SETUP.md  build.bat  build.sh  example_json_analyzer.py  main.py  pyproject.toml  pytest.ini  requirements.txt  shello.spec  test_cli_integration.py  test_model.py  test_prompt_update.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
doc/: HOW_TO_RELEASE.md
docs/: HISTORY_FEATURE.md  HOW_TO_RELEASE.md
shello_cli/: __init__.py  cli.py  config.py  constants.py  defaults.py  patterns.py  setup.py  types.py
shello_cli/agent/: __init__.py  message_processor.py  models.py  shello_agent.py  system_info.py  template.py  tool_executor.py
shello_cli/api/: __init__.py  bedrock_client.py  (+2 more)
tests/: __init__.py  conftest.py  manual_test_surrogates.py  test_agent.py  test_bash_tool.py  test_bash_tool_trust_integration.py  test_bedrock_client.py  test_cache_id_sequential.py  test_cli_integration.py  test_client_factory.py  test_command_detector.py  test_compressor.py  test_content_plus_toolcalls_prompts.py  test_context_manager.py  test_direct_executor.py  test_executable_updater.py  test_get_cached_output_tool.py  test_integration_output_management.py  test_json_analyzer_tool.py  test_manager.py  test_mcp_integration.py  test_message_processor_integration.py  test_message_processor_scenarios.py  test_model.py  test_natural_language_detection.py  test_openai_client.py  test_openai_client_integration.py  test_output_cache.py  test_output_manager.py  test_output_utils.py  test_pattern_matcher.py  test_platform_detector.py  test_remote_bash_tool.py  test_semantic.py  test_session_restorer.py  test_settings_manager.py  test_startup_version_check.py  test_surrogate_integration.py  test_surrogate_sanitization.py  test_system_info.py  (+9 more)
(+60 files in other folders)
